syntax = "proto3";
option go_package = "./subscription_manager;pb_subscription_manager";

service SubscriptionManager {
  rpc CreateSubscriptionForPublisher (CreateSubscriptionForPublisherRequest) returns (Response);
  rpc GetContentSubscribers (GetContentSubscribersRequest) returns (GetContentSubscribersResponse);
}

message Response {
  bool is_success = 1;
}

message CreateSubscriptionForPublisherRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}

message GetContentSubscribersRequest {
  int32 publication_id = 1;
}

message GetContentSubscribersResponse {
  repeated int32 subscriber_ids = 1;
}